PR/50818: David Binderman: Delete dead code (copied from if_et.c)